tests/paczka1/small_fuzzy/77368935.err
Error in line 12: KIa2xHasULD A841 31,3
